Split some logic out into services. Fixed responsive problem. Other tweaks to improve the componenet.

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,9 @@
     <script src="libs/polymer.js"></script>
     <script src="libs/moment.js"></script>
     <script src="libs/Chart.js"></script>
+    <script src="services/color.service.js"></script>
+    <script src="services/chart-config.service.js"></script>
+    <script src="services/default-config.service.js"></script>
     <link rel="import" href="components/demo.html" />
     <style>
       html {
@@ -15,6 +18,6 @@
     </style>
   </head>
   <body>
-    <jha-chart-demo></jha-chart-demo>
+    <banno-chart-demo></banno-chart-demo>
   </body>
 </html>
