Working on a function that takes the default config and adds/replaces values with the custom config's

--- a/src/jha-chart.html
+++ b/src/jha-chart.html
@@ -42,6 +42,8 @@
       _createChart() {
         this.config.data = chartConfigService.setDataDefaults(this.config.data);
         this.config.options = chartConfigService.setOptionsDefaults(this.config.options);
+        //Only running to test
+        chartConfigService._setDefaults(this.config);
 
         let ctx = this.shadowRoot.getElementById('chart');
         let chart = new Chart(ctx, {
