Using much simpler method merging default and custom configs together. Removed services that new logic replaces and unused color service. Cleaned up project and build process to account for these changes.

--- a/src/demo.html
+++ b/src/demo.html
@@ -18,7 +18,7 @@
       <jha-card>
         <header>Unique logins</header>
         <article style="position: relative">
-          <banno-chart config="[[config]]"></jha-chart>
+          <banno-chart custom-config="[[customConfig]]"></jha-chart>
         </article>
       </jha-card>
     </jha-container>
@@ -31,11 +31,11 @@
       constructor() {
         super();
 
-        this.config = {
+        this.customConfig = {
           type: 'line',
           data: {
             labels: this._createLast30DaysLabels(),
-            datasets: [{ data: this._createLast30DaysData() }]
+            datasets: [{ data: this._createLast30DaysData() }, { data: this._createLast30DaysData() }]
           }
         }
       }
